src/unused/foo-bar-ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  namespace: pf
  labels:
    app: foo
spec:
  containers:
  - command:
    - /agnhost
    - netexec
    - --http-port
    - "8080"
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: foo-app
    resources:
      limits:
        cpu: "0.2"
        memory: "64Mi"
      requests:
        cpu: "0.1"
        memory: "32Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: pf
spec:
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  namespace: pf
  labels:
    app: bar
spec:
  containers:
  - command:
    - /agnhost
    - netexec
    - --http-port
    - "8080"
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: bar-app
    resources:
      limits:
        cpu: "0.2"
        memory: "64Mi"
      requests:
        cpu: "0.1"
        memory: "32Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
  namespace: pf
spec:
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: pf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo(/|$)(.*)
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      - pathType: Prefix
        path: /bar(/|$)(.*)
        backend:
          service:
            name: bar-service
            port:
              number: 8080
---
